[persistence] improve time mock for quartz scheduler (#1787)
* [persistence] improve time mock for quartz scheduler

* fix flaky anomaly resolution test